--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -6,7 +6,7 @@
 		<div class="header" >
 			<span *ngIf="arrivalItemVM.hasReservedRoom" class="reserved-room ellipsis-text yellow-color" title="{{arrivalItemVM.reservedRoomVM.room.name}}">{{arrivalItemVM.reservedRoomVM.room.name}}</span>
 			<span class="customer-name ellipsis-text clickable" (click)="openCustomerModal()" title="{{arrivalItemVM.customerName}}">{{arrivalItemVM.customerName}}</span>
-			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ 'Booking Notes' | translate }}" (click)="openBookingNotesModal()" class="booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
+			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ arrivalItemVM.arrivalItemDO.bookingNotes }}" (click)="openBookingNotesModal()" class="clickable booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
 		</div>
 		<div class="body">
 			<div class="room-type ellipsis-text " title="{{arrivalItemVM.roomCategoryLabel}}">{{arrivalItemVM.roomCategoryLabel}}</div>
@@ -38,7 +38,7 @@
 	<div class="right">
 		<div class="header" >
 			<span class="customer-name ellipsis-text clickable" (click)="openCustomerModal()" title="{{arrivalItemVM.customerName}}">{{arrivalItemVM.customerName}}</span>
-			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ 'Booking Notes' | translate }}" (click)="openBookingNotesModal()" class="booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
+			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ arrivalItemVM.arrivalItemDO.bookingNotes }}" (click)="openBookingNotesModal()" class="clickable booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
 		</div>
 		<div class="body">
 			<div class="room-type ellipsis-text " title="{{arrivalItemVM.roomCategoryLabel}}">{{arrivalItemVM.roomCategoryLabel}}</div>
@@ -71,7 +71,7 @@
 	<div class="right">
 		<div class="header" >
 			<span class="customer-name ellipsis-text clickable" (click)="openCustomerModal()" title="{{arrivalItemVM.customerName}}">{{arrivalItemVM.customerName}}</span>
-			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ 'Booking Notes' | translate }}" (click)="openBookingNotesModal()" class="booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
+			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ arrivalItemVM.arrivalItemDO.bookingNotes }}" (click)="openBookingNotesModal()" class="clickable booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
 		</div>
 		<div class="body">
 			<div class="room-type ellipsis-text" title="{{arrivalItemVM.roomCategoryLabel}}">{{arrivalItemVM.roomCategoryLabel}}</div>
