--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/housekeeping-report/template/settings-housekeeping-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/housekeeping-report/template/settings-housekeeping-report.html
@@ -2,7 +2,7 @@
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
-				<h3>{{ 'Housekeeping Report' | translate }}</h3><small>{{ 'Contains the arrivals, stayovers and departures for today with stats containing the rollaway beds placement.' | translate }}</small>
+				<h3>{{ 'Housekeeping Report' | translate }}</h3><small>{{ 'Contains the arrivals, stayovers and departures for today - useful for the housekeeping staff.' | translate }}</small>
 			</label>
 			<hr>
 			<div class="row">
