#170 Added trasaction fee amount on invoices (client); added 'price' pipe where necessary

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -52,7 +52,7 @@
                     <td><b>{{ 'Total' | translate }}</b></td>
                     <td></td>
                     <td></td>
-                    <td>{{ ccySymbol }} <b>{{ totalPrice }}</b></td>
+                    <td>{{ ccySymbol }} <b>{{ totalPrice | price }}</b></td>
                     <td></td>
                 </tr>
             </tfoot>
@@ -96,26 +96,26 @@
                     </td>
                     <td width="15%">
                         <span *ngIf="!invoiceItemVM.displayBookingDateBreakdown()">
-                            {{ ccySymbol }} <b>{{ invoiceItemVM.price }}</b>
+                            {{ ccySymbol }} <b>{{ invoiceItemVM.price | price}}</b>
                         </span>
 
                         <!-- Booking price -->
                         <span *ngIf="invoiceItemVM.displayBookingDateBreakdown()">
                             <p *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.roomPricePerNightList" class="invoice-item-small">
-                                {{ ccySymbol }} <b>{{ roomPricePerNight.price }}</b>
+                                {{ ccySymbol }} <b>{{ roomPricePerNight.price | price }}</b>
                             </p>
                         </span>
                         <!-- END Booking price -->    
                     </td>
                     <td width="15%">
                         <span *ngIf="!invoiceItemVM.displayBookingDateBreakdown()">
-                            {{ ccySymbol }} <b>{{ invoiceItemVM.totalPrice }}</b>
+                            {{ ccySymbol }} <b>{{ invoiceItemVM.totalPrice | price }}</b>
                         </span>
                         
                         <!-- Booking price -->
                         <span *ngIf="invoiceItemVM.displayBookingDateBreakdown()">
                             <p *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.roomPricePerNightList" class="invoice-item-small">
-                                {{ ccySymbol }} <b>{{ roomPricePerNight.price }}</b>
+                                {{ ccySymbol }} <b>{{ roomPricePerNight.price | price }}</b>
                             </p>
                         </span>
                         <!-- END Booking price -->  
