--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -57,7 +57,7 @@
 				<small>{{ 'The payment methods that will be supported by the hotel.' | translate }}</small>
 			</label>
 			<div class="form-group">
-				<div class="well margin-bottom-0px border-radius-0px input-group" [ngClass]="{'form-warning': ((!didSelectPaymentMethod() || !didInputFeeWherePaymentMethodsHaveTransactionFees())&&didSubmitPage)}">
+				<div class="well margin-bottom-0px border-radius-0px input-group" [ngClass]="{ 'form-warning': !didSelectPaymentMethod() && didSubmitPage }">
 					<div class="row">
 						<div class="col-xs-4">
 							<label class="control-label">{{'Payment method' | translate}}</label>
@@ -83,49 +83,27 @@
 						<div class="col-md-4 col-xs-12 form-group">
 							<div class="input-group">
 								<div class="btn-group" data-toggle="buttons">
-									<button class="btn btn-default" (click)="isFixedCommission=true" [ngClass]="{'active': isFixedCommission}">
+									<button class="btn btn-default" [disabled]="!paymentMethodVM.isSelected" (click)="paymentMethodVM.hasFixedTransactionFee=true" [ngClass]="{'active': paymentMethodVM.hasFixedTransactionFee}">
 									{{ 'Fixed' | translate }}
 								</button>
-									<button class="btn btn-default" (click)="isFixedCommission=false" [ngClass]="{'active': !isFixedCommission}">
+									<button class="btn btn-default" [disabled]="!paymentMethodVM.isSelected" (click)="paymentMethodVM.hasFixedTransactionFee=false" [ngClass]="{'active': !paymentMethodVM.hasFixedTransactionFee}">
 									{{ 'Percent' | translate }}
 								</button>
 								</div>
 							</div>
-						</div>			
+						</div>
 						<div class="col-md-4 col-xs-12">
 							<div class="row">
 								<div class="col-xs-12">
-									<div class="form-group">
-										<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('commission')}">
-											<input type="number" class="form-control">
-										</div>
-										<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid commission' | translate }}</small></label>
-									</div>
-								</div>
+									<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('commission')}">
+                            			<span class="input-group-addon">
+											<span *ngIf="!paymentMethodVM.hasFixedTransactionFee">%</span>
+											<span *ngIf="paymentMethodVM.hasFixedTransactionFee">{{ ccySymbol }}</span>
+										</span>
+										<input type="number" [disabled]="!paymentMethodVM.isSelected" [(ngModel)]="paymentMethodVM.transactionFeeAmount" class="form-control"/>
+                        			</div>
 							</div>
 						</div>
-						<!--<div class="col-xs-3">
-							<div class="input-group">
-								<div class="checkbox">
-									<label>
-										<input type="checkbox" [disabled]="!paymentMethodVM.isSelected" [(ngModel)]="paymentMethodVM.hasTransactionFee" name="paymentMethodVMHasTransactionFee"/>
-									</label>
-								</div>
-							</div>
-						</div>
-						
-						<div class="col-xs-3">	
-							<div *ngIf="paymentMethodVM.isSelected && paymentMethodVM.hasTransactionFee" class="input-group">
-								<percentage-input-number
-									[initialPercentage]="paymentMethodVM.transactionFee"
-									[didSubmitForm]="didSubmitPage"
-									[readonly]="false"
-									[isRequired]="true"
-									[errorMessage]="''" 
-									(onPercentageChanged)="paymentMethodVM.transactionFee = $event">
-								</percentage-input-number>
-							</div>
-						</div>-->
 					</div>
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method and input fees where enabled' | translate }}</small></label>
