--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -56,8 +56,9 @@
 				<h3>{{ 'Supported payments' | translate }}  </h3>
 				<small>{{ 'The payment methods that will be supported by the hotel.' | translate }}</small>
 			</label>
-			<div class="form-group">
-				<div class="well margin-bottom-0px border-radius-0px input-group" [ngClass]="{ 'form-warning': !didSelectPaymentMethod() && didSubmitPage }">
+			
+			<div class="well margin-bottom-0px border-radius-0px form-group">
+				<div class="input-group">
 					<div class="row">
 						<div class="col-xs-4">
 							<label class="control-label">{{'Payment method' | translate}}</label>
@@ -70,7 +71,7 @@
 						</div>
 					</div>
 					<div class="row" *ngFor="let paymentMethodVM of allPaymentMethodsVMContainer.paymentMethodList">
-						<div class="col-xs-4">
+						<div class="col-md-4 col-xs-12">
 							<div class="input-group">
 								<div class="checkbox" >
 									<label>
@@ -80,7 +81,7 @@
 							</div>
 						</div>
 						
-						<div class="col-md-4 col-xs-12 form-group">
+						<div class="col-md-4 col-xs-12">
 							<div class="input-group">
 								<div class="btn-group" data-toggle="buttons">
 									<button class="btn btn-default" [disabled]="!paymentMethodVM.isSelected" (click)="paymentMethodVM.hasFixedTransactionFee=true" [ngClass]="{'active': paymentMethodVM.hasFixedTransactionFee}">
@@ -95,18 +96,20 @@
 						<div class="col-md-4 col-xs-12">
 							<div class="row">
 								<div class="col-xs-12">
-									<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('commission')}">
-                            			<span class="input-group-addon">
+									<div class="input-group" [ngClass]="{'form-warning': !paymentMethodVM.trasactionFeeIsValid()}">
+										<span class="input-group-addon">
 											<span *ngIf="!paymentMethodVM.hasFixedTransactionFee">%</span>
 											<span *ngIf="paymentMethodVM.hasFixedTransactionFee">{{ ccySymbol }}</span>
 										</span>
 										<input type="number" [disabled]="!paymentMethodVM.isSelected" [(ngModel)]="paymentMethodVM.transactionFeeAmount" class="form-control"/>
-                        			</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method and input fees where enabled' | translate }}</small></label>
+				<label *ngIf="(!didSelectPaymentMethod() || !allSelectedPaymentMethodsHaveValidTransactionFees()) && didSubmitPage" class="text-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method and input fees where enabled' | translate }}</small></label>
+			
 			</div>
 		</div>
 		
