--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
@@ -80,7 +80,10 @@
         <form class="form-inline">
             <div class="form-group m-t-0 m-r-12 m-b-0 m-l-0">
                 <div class="input-group">
-                    <span><b><i class="fa" [ngClass]="selectedPaymentMethodVM.iconUrl"></i> {{selectedPaymentMethodVM.displayName | translate}}</b> has a transaction fee of: <b>{{ transactionFee | percentage }}</b>. <b>To pay</b> (transaction fee included): <b>{{ccySymbol}} {{totalAmountWithTransactionFee | price}}</b></span>
+                    <span><b><i class="fa" [ngClass]="selectedPaymentMethodVM.iconUrl"></i> {{selectedPaymentMethodVM.displayName | translate}}</b> has a transaction fee of: 
+                    <b *ngIf="transactionFeeIsFixed">{{ccySymbol}} {{ transactionFee.amount }}</b>
+                    <b *ngIf="!transactionFeeIsFixed">{{ transactionFee.amount | percentage}}</b>
+                    . <b>To pay</b> (transaction fee included): <b>{{ccySymbol}} {{totalAmountWithTransactionFee | price}}</b></span>
                 </div>
             </div>
 
