#8 Made the confirm button in the room maintenance status modal green

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/modal/template/room-maintenance-status-modal-component.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/modal/template/room-maintenance-status-modal-component.html
@@ -14,5 +14,5 @@
 	</div>
 </div>
 <div *ngIf="!isLoading" class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="saveMaintenanceStatus()">OK</button>
+    <button type="button" class="btn btn-primary" (click)="saveMaintenanceStatus()">OK</button>
 </div>
