--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/modal/template/room-maintenance-status-modal-component.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/modal/template/room-maintenance-status-modal-component.html
@@ -1,6 +1,6 @@
 <div class="modal-header text-center">
 	<button type="button" class="close" (click)="closeDialog()">&times;</button>
-	<h4 class="modal-title">{{ 'Change Room Status' | translate }}</h4>
+	<h4 class="modal-title">{{ 'Change Room Status for %roomName%' | translate:{roomName: roomName} }}</h4>
 </div>
 <loading-component [isLoading]="isLoading"></loading-component>
 <div *ngIf="!isLoading" class="modal-body">
