[HotFix] Updated translations.

--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -54,7 +54,7 @@
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
 				<h3>{{ 'Supported payments' | translate }}  </h3>
-				<small>{{ 'The payment methods that will be supported by the hotel.' | translate }}</small>
+				<small>{{ 'The payment methods that will be supported by the hotel. On payment methods a fee per transaction can be configured.' | translate }}</small>
 			</label>
 			
 			<div class="well margin-bottom-0px border-radius-0px form-group">
