#258 Transaction fee could have decimals - added pipe to allow this

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
@@ -82,7 +82,7 @@
                 <div class="input-group">
                     <span><b><i class="fa" [ngClass]="selectedPaymentMethodVM.iconUrl"></i> {{selectedPaymentMethodVM.displayName | translate}}</b> has a transaction fee of: 
                     <b *ngIf="transactionFeeIsFixed">{{ccySymbol}} {{ transactionFee.amount }}</b>
-                    <b *ngIf="!transactionFeeIsFixed">{{ transactionFee.amount | percentage}}</b>
+                    <b *ngIf="!transactionFeeIsFixed">{{ transactionFee.amount | percentageWithDecimals}}</b>
                     . <b>To pay</b> (transaction fee included): <b>{{ccySymbol}} {{totalAmountWithTransactionFee | price}}</b></span>
                 </div>
             </div>
