--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
@@ -10,7 +10,7 @@
         <div class="col-xs-12 padding-top-5px">
             <span class="clickable-item" (click)="goToBooking(bookingDO)">
                 <i class="fa unitpal-font" title="{{'Group/Individual Booking References' | translate}}">8</i> 
-                 {{ 'ResNO' | translate }} {{bookingDO.reservationNumber}}
+                 {{ 'ResNO' | translate }} {{bookingDO.displayReservationNumber}}
             </span> 
         </div>
     </div>
