#235 Bootstrapped 'add booking' action on booking groups

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/template/booking-history-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/template/booking-history-dashboard.html
@@ -12,6 +12,7 @@
             <booking-overview
                 [bookingVM]="selectedBookingVM"
                 (onEdit)="editBooking($event)"
+                (onAddBookingToGroup)="addBookingToGroup($event)"
                 >
             </booking-overview>
         </div>
