--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/booking-overview/template/booking-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/booking-overview/template/booking-overview.html
@@ -65,9 +65,14 @@
             </tbody>
         </table>
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-3">
 		<a class="btn btn-lg" (click)="editBooking()">
 			<i class="fa fa-pencil"></i> {{ 'Edit' | translate }}
+		</a>
+    </div>
+    <div class="col-xs-9">
+		<a class="btn btn-lg" (click)="addBookingToGroup()">
+			<i class="fa fa-plus"></i> {{ 'Add booking to group' | translate }}
 		</a>
     </div>
 </div>
