--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -37,7 +37,7 @@
 	</div>
 </div>
 <div class="modal-lg-body container">
-	<new-booking-search class="full-height" [hidden]="!isBookingSearch()"> </new-booking-search>
+	<new-booking-search class="full-height" [newBookingInput]="newBookingInput" [hidden]="!isBookingSearch()"> </new-booking-search>
 	<new-booking-fill-details class="full-height" [hidden]="!isFillDetails()"> </new-booking-fill-details>
 	<new-booking-email-config class="full-height" [hidden]="!isEmailConfig()"></new-booking-email-config>
 	
