#276 Allow creating related price products from the client

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -34,6 +34,7 @@
 		(onArchive)="archivePriceProduct($event)"
 		(onDraft)="draftPriceProduct($event)"
 		(onCopy)="copyPriceProduct($event)"
+		(onCreateRelatedPriceProduct)="createRelatedPriceProduct($event)"
 		>
 	</price-product-overview>
 	<price-product-edit-container
