--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -29,14 +29,19 @@
 					<label>{{ 'Price configuration in %ccySymbol%' | translate:{ccySymbol: ccy.nativeSymbol} }}</label>
 				</div>
 				<div class="col-xs-6">
-					<a class="btn btn-xs" (click)="openNewDynamicPriceModal()"><i class="fa unitpal-font">'</i> {{ 'Add' | translate }} {{ 'Dynamic Daily Rate' | translate }}</a>
+					<a class="btn btn-xs" *ngIf="editDynamicPrices" (click)="openNewDynamicPriceModal()">
+						<i class="fa unitpal-font">'</i> {{ 'Add' | translate }} {{ 'Dynamic Daily Rate' | translate }}
+					</a>
 				</div>
 			</div>
 			<div class="basic-info-settings-tabbar">
 				<ul class="nav nav-tabs">
 					<li *ngFor="let dynamicPriceVM of dynamicPriceVMList; let i = index" [ngClass]="{'active': dynamicPriceVM.selected}">
 						<a [ngClass]="{'active': dynamicPriceVM.selected}" (click)="selectDynamicPrice(i)">
-							{{ dynamicPriceVM.name }} <a *ngIf="dynamicPriceVM.selected" (click)="openEditDynamicPriceModal(dynamicPriceVM, i)"><i class="fa unitpal-font">]</i></a>
+							{{ dynamicPriceVM.name }} 
+							<a *ngIf="dynamicPriceVM.selected && editDynamicPrices" (click)="openEditDynamicPriceModal(dynamicPriceVM, i)">
+								<i class="fa unitpal-font">]</i>
+							</a>
 						</a>
 					</li>
 				</ul>
