--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -1,7 +1,7 @@
 <loading-component [isLoading]="isLoading"></loading-component>
 <div class="basic-info-form-container container-fluid" customScroll>
 	<div class="row basic-info-form" *ngIf="!isLoading">
-		<div class="col-xs-12 col-md-3">
+		<div class="col-xs-12 col-md-6 col-lg-3">
 			<div class="row">
 				<div class="col-xs-12">
 					<label class="control-label">
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 
-		<div class="col-xs-12 col-md-3">
+		<div class="col-xs-12 col-md-6 col-lg-3">
 			<div class="row">
 				<div class="col-xs-12">
 					<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="vatTaxType"></basic-info-tax-list>
@@ -51,7 +51,7 @@
 		</div>
 		
 
-		<div class="col-xs-12 col-md-6">
+		<div class="col-xs-12 col-md-12 col-lg-6">
 			<label class="control-label">
 				<h3>{{ 'Supported payments' | translate }}  </h3>
 				<small>{{ 'The payment methods that will be supported by the hotel. On payment methods a fee per transaction can be configured.' | translate }}</small>
@@ -85,7 +85,7 @@
 							<div class="input-group">
 								<div class="btn-group" data-toggle="buttons">
 									<button class="btn btn-default" [disabled]="!paymentMethodVM.isSelected" (click)="paymentMethodVM.hasFixedTransactionFee=true" [ngClass]="{'active': paymentMethodVM.hasFixedTransactionFee}">
-									{{ 'Fixed' | translate }}
+									{{ 'Flat' | translate }}
 								</button>
 									<button class="btn btn-default" [disabled]="!paymentMethodVM.isSelected" (click)="paymentMethodVM.hasFixedTransactionFee=false" [ngClass]="{'active': !paymentMethodVM.hasFixedTransactionFee}">
 									{{ 'Percent' | translate }}
