--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -91,6 +91,9 @@
 					<a class="btn btn-xs lazy-loading-table-row-command" *ngIf="canPerformAddExistingRowCommandOnItem(item)" (click)="addExistingItem(item)" title="{{ 'Add' | translate }}">
 						<i class="fa unitpal-font">G</i>
 					</a>
+					<a class="btn btn-xs" *ngIf="canPerformShowDetailsCommandOnItem(item)" (click)="showDetailsForItem(item)" title="{{ 'Show Details' | translate }}">
+						<i class="fa fa-eye"></i>
+					</a>
 				</td>
 			</tr>
 			<tr *ngIf="!noResultsExist()" class="lazy-loading-table-last-row">
