283 In the new booking flow display the price per night breakdown for each result

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
@@ -7,7 +7,7 @@
 			</booking-search-parameters>
 		</div>
 		<div class="row booking-search-results">
-			<lazy-loading-table #searchResults (onAddExistingItem)="addBookingVMInCart($event)">
+			<lazy-loading-table #searchResults (onAddExistingItem)="addBookingVMInCart($event)"  (onShowDetails)="showDetailsForBookingVM($event)">
 			</lazy-loading-table>
 		</div>
 		<div class="row booking-search-room-availability">
