#289 Change customer API to support contact names on companies/travel agents

--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/corporate/template/corporate-customer-details.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/corporate/template/corporate-customer-details.html
@@ -69,6 +69,35 @@
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid url' | translate }}</small></label>
 			</div>
 		</div>
+	</div>
+	<div class="row"  *ngIf="corporateDetails">
+		<div class="col-md-4 col-xs-12 form-group">
+			<label>{{ 'Contact Details' | translate }}</label>
+			<div class="input-group">
+				<table class="table table-striped projects">
+					<tbody>
+						<tr *ngFor="let contactDetails of corporateDetails.contactDetailsList">
+							<td class="clickable" (click)="selectContactDetails(contactDetails)">{{contactDetails.contactName}}</td>
+							<td>
+								<a class="btn btn-xs" (click)="removeContactDetails(contactDetails)">
+									<i class="fa unitpal-font">\</i> {{ 'Remove' | translate }}
+								</a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="btn btn-xs" (click)="addContactDetails()">
+									<i class="fa unitpal-font">'</i> {{ 'Add' | translate }}
+								</a>
+							</td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	<div *ngIf="currentContactDetails" class="row">
 		<div class="col-md-4 col-xs-12">
 			<div class="form-group">
 				<label>{{ 'Contact Name' | translate }}</label>
@@ -78,8 +107,6 @@
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid name length' | translate }}</small></label>
 			</div>
 		</div>
-	</div>
-	<div class="row">
 		<div class="col-md-4 col-xs-12">
 			<div class="form-group">
 				<label>{{ 'Phone' | translate }}</label>
@@ -108,6 +135,14 @@
 			</div>
 		</div>
 	</div>
+	<div *ngIf="currentContactDetails" class="row">
+		<div class="col-xs-12 col-md-offset-6 col-md-3">
+			<button type="button" class="btn btn-primary btn-block" (click)="saveContactDetails()">
+				{{ 'Update Contact Details' | translate }}
+			</button>
+		</div>
+	</div>
+	<hr>
 	<div class="row">
 		<div class="col-md-4 col-xs-12 form-group">
 			<label>{{ 'Pay Invoice By Agreement' | translate }}</label>
