#307 changes after CR

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
@@ -8,6 +8,7 @@
 				<div *ngIf="selectedDate" class="clickable operations-datepicker">
 					<th-date-picker
 						[initialThDate]="selectedDate"
+						[selectedThDate]="selectedDate"
 						[showLabel]="false"
 						[showIcon]="false"
 						(didSelectThDate)="didSelectArrivalDate($event)"
